Added Sound for Homework bonus

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
+    <audio src="assets/winSound.mp3" id='winSound'></audio>
+    <audio src="assets/loseSound.mp3" id='loseSound'></audio>
     <div class="container"> 
         <div class="panel panel-default">
             <div class="panel-heading">
